Ajuste no workflow - sintaxe yaml

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - name: Instalar Python
-      - uses: actions/setup-python@v6
+        uses: actions/setup-python@v6
         with: 
           python-version: '3.13'
       - name: Instalar Pytest e rodar os testes
